Optimize Dockerfile with Alpine Linux and better caching, add health check endpoint

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-ultralytics==8.0.196
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-Pillow==10.1.0
+# Minimal Python dependencies for video analysis
+ultralytics>=8.0.0
+opencv-python-headless>=4.8.0
 
